--- a/main.css
+++ b/main.css
@@ -746,7 +746,7 @@ hr{
 }
 
 .b-images {
-    background:tarnsparent;
+    background:transparent;
     padding: 25px ;
     list-style: none;
     text-align: center;
@@ -771,32 +771,7 @@ hr{
   text-decoration: dashed;
   text-decoration-color: #fff;
 }
-#yam{
-  background-image: url(https://media-exp1.licdn.com/dms/image/C4E05AQFAhMLlRSA_Uw/videocover-high/0/1666602248874?e=2147483647&v=beta&t=qyHTysu_rk_a4AvyDRH5Xx0DVl8XBJor5Rnrw0tc3DQ);
-  background-position:center;
-  background-size:cover;
-  background-repeat: no-repeat;
-}
-#son{
-  background-image: url(http://www.trutower.com/wp-content/uploads/2012/12/Sony-logo-1.jpg);
-  background-position:center;
-  background-size:cover;
-  background-repeat: no-repeat;
-}
 
-#boss{
-  background-image: url(https://tse3.mm.bing.net/th?id=OIP.hHYxZeUx4RIiq_foVJXhOAHaHa&pid=Api&P=0&h=180);
-  background-position:center;
-  background-size:cover;
-  background-repeat: no-repeat;
-}
-
-#pearl{
-  background-image: url(http://www.dafont.com/forum/attach/orig/1/4/14781.jpg);
-  background-position:center;
-  background-size:cover;
-  background-repeat: no-repeat;
-}
 
 
 
