--- a/main.css
+++ b/main.css
@@ -402,14 +402,21 @@ transform: scale(1.1);
   }
 }
 
-.announce{
+..announce{
   color: #fff;
   margin: 120px 30px 30px 30px;
 }
 .news{
   height: 16vw;
   margin: 80px 0 0 0;
+  transition: all .5s ease;
 }
+.news:hover{
+  border-radius: 15px;
+  border: solid 1px #ffcc0060;
+  transform: scaley(1.1);
+}
+
 .news p{
   letter-spacing: 1px;
   font-family: 'Poppins', sans-serif;  
@@ -459,8 +466,9 @@ hr{
   padding: 0 0 0 30px; 
 }
 
+
 .brand{
-  margin: 2% 0 4% 39%;
+  margin: 10% 0 4% 39%;
   color: #fff;
   font-family: 'Archivo Black', sans-serif;
   font-size: 3.6rem;
