--- a/main.css
+++ b/main.css
@@ -1046,6 +1046,272 @@ hr{
 }
 }
 
+@media only screen and (max-width:360px){
+  .logo{
+    font-size: small;
+  }
+  nav{
+    visibility: hidden;
+  }
+  .item{
+    height: 400px;
+  }
+  .p-one{
+    visibility: hidden;
+  }
+  .buttons{
+    margin-top: -130px;
+  }
+  .dots{
+    visibility: hidden;
+  }
+  .categories{
+    height: 800px;
+  }
+  .li-categories{
+    height: 130px;
+    
+  }
+  .li-categories ol{
+    display: flex;
+    flex-direction: column;
+  }
+  .eguitar,.audio,.speakers,.edrum{
+    transition: none;
+    transform: none;
+  }
+  .li-categories ol li{
+    border: solid 1px rgba(128, 128, 128, 0.235);
+    border-radius: 7px;
+    height: 130px;
+    width: 155px;
+    transition: none;
+    transform: none;
+    
+  }
+  .li-categories #text{
+    opacity: 1;
+    align-content: center;
+    padding-top: 90px;
+    margin-top: 10px ;
+}
+.eguitar,.audio,.speakers,.edrum{
+  box-shadow: 0 .1rem .5rem var(--main-color);
+  transition: none;
+}
+  .edrum{
+    transform: none;
+  }
+  .speakers{
+    transform: none;
+  }
+  .audio{
+    transform: none;
+  }
+  .eguitar{
+    transform: none;
+  }
+
+  .banners{
+    margin:-150px 10px;
+  }
+  .fb{
+    width: 340px;
+  }
+  .fb h3{
+    display: flex;
+    flex-direction: row;
+    font-size: medium;
+    padding: 400px 115px ;
+    letter-spacing: 3px;
+  }
+  .fb p{
+    margin-right: 10px;
+  }
+  .tb{
+    visibility: hidden;
+  }
+  #eight{
+    margin:200px 10px;
+  }
+
+.icons img{
+  height: 8vh;
+  width: 100px;
+  padding: 40px 40px ; 
+  transition: none;
+}
+
+.icons img{
+  transform: none;
+}
+
+.announce{
+  color: #fff;
+  margin-top:-180px;
+  width: 300px;
+  margin-right: 20px;
+}
+.announce h2{
+  font-size: xx-large;
+  margin: 0;
+  padding:0 ;
+  text-align: center;
+}
+
+.latest{
+  font-family: 'khand';
+  font-size: large;
+  margin-top: 70px;
+  margin-bottom: -50px;
+  padding-left: 10px ;
+}
+.news{
+  height: 55vh;
+  margin: 60px 0 0 0;
+  border-radius: 10px;
+  border: solid 1px #ffcc0060;
+  transform: none;
+  transition: none;
+}
+.news a img{
+  height: 50px;
+  width: 50px;
+  border-radius: 120px;
+  border: solid 1px #ffffff72;
+  margin: 10px 5px;
+}
+
+.news p{
+  letter-spacing: 1px;
+  font-family: 'Poppins', sans-serif;  
+}
+.announce a{
+  color: #fff; 
+}
+
+hr{
+  border: solid 2px #ffcc0011;
+  margin-top: 50px;
+}
+.announce h3{
+  font-family: 'Khand', sans-serif;
+  font-size: medium;
+  font-weight: Medium 200;
+  letter-spacing: 0;
+  margin: 0;
+  padding-left:70px;
+  margin-top: -66px;
+}
+
+.news img {
+  width: 250px;
+  height: 170px;
+  margin: 22px 0 0 20px;
+  
+}
+.news p{
+  margin: 0;
+  padding:0;
+  font-size: small; 
+  padding: 10px 12px;
+}
+.brand{
+  margin: 20% 25%;
+  color: #fff;
+  font-family: 'Archivo Black', sans-serif;
+  font-size: xx-large;
+  font-weight: Regular 400;
+  
+}
+
+.sony {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(http://www.bassheadspeakers.com/wp-content/uploads/2017/03/Best-Bookshelf-Speakers-1.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+/*  */
+.im-footer{
+  border: solid 1px var(--bg-color);
+  width: 100%;
+  height: 14vw;
+  margin-top:800px;
+  margin-bottom: 0;
+  background-color: rgba(128, 128, 128, 0.151);;
+}
+.footer-text{
+  width: 100%;
+  margin:0;
+  padding: 0 0 0 5px;
+  color: var(--white-color);
+}
+.footer-text p {
+    padding-left: 22px;
+}
+.footer-iconTop .f-btn {
+    visibility:hidden
+}
+
+
+.f-icons{
+  visibility: hidden; 
+}
+  /* footer */
+.m-footer{
+  border: solid 1px var(--bg-color);
+  width: 100%;
+  height: 14vw;
+  margin-left: -2px;
+  background-color: rgba(128, 128, 128, 0.151);;
+}
+.footer-text{
+  width: 100%;
+  margin: 20px 0 0 0;
+  padding: 0 0 0 5px;
+  font-size: 1rem;
+  color: var(--white-color);
+}
+.footer-text p {
+    padding-left: 22px;
+}
+.footer-iconTop{
+  margin: -5% 0 0 94%;
+
+}
+.footer-iconTop a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: #000;
+    border-radius: .8rem;
+    outline: .2rem solid #fff;  
+}
+
+.footer-iconTop a i {
+    font-size: 1rem;
+    color: #fff;
+}
+
+.f-icons{
+  margin: 20px 0 0 0;
+  padding: 0 0 0 560px;
+  
+}
+.f-icons a {
+  font-size: 35px;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+}
+
+.f-icons a:hover{
+  box-shadow:none ;
+}
+}
+
 
 
 
